[package]
name = "terminal_time_machine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "record"
path = "src/main.rs"

[[bin]]
name = "play"
path = "src/player.rs"

[dependencies]
portable-pty = "0.8"
anyhow = "1.0"
serde_json = "1.0"
base64 = "0.21"
nix = { version = "0.27", features = ["term"] }
clap = { version = "4.0", features = ["derive"] }